k8s-manifests/overlays/dev/superapp/cps/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cps-auth
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: bps-auth
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/member-auth-dev:latest
        imagePullPolicy: Always
