k8s-manifests/overlays/dev/superapp/cps/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cps-auth-route

spec:
  path: /api/v1/cbesuperapp/cps_auth
  to:
    name: cps-auth-dev
    weight: 100
    kind: Service
  host: devapisuperapp.cbe.com.et
  port:
    targetPort: 8080


---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cps-action-route

spec:
  path: /api/v1/cbesuperapp/cps_action
  to:
    name: cps-action-dev
    weight: 100
    kind: Service
  host: devapisuperapp.cbe.com.et
  port:
    targetPort: 8080
